# dotstar_strip

./: .gitignore  CMakeLists.txt  README.md  boot.py  build.sh  code.py  dotstar.py  install.sh  safe_mode.py
dotstar_strip/: CMakeLists.txt  dotstar_strip.c
